--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.17.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/react-slick": "^0.23.13",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
+    "cookies-next": "^4.2.1",
     "next": "14.2.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
@@ -26,6 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
+    "prisma": "^5.17.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
