--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.3",
     "cookies-next": "^4.2.1",
+    "lucide-react": "^0.416.0",
     "next": "14.2.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
