--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookies-next": "^4.2.1",
     "lucide-react": "^0.416.0",
     "next": "14.2.4",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
